--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "LAB1",
+  "name": "ice-5",
   "version": "1.0.0",
-  "description": "Repo for WEBD6201-W2022 LAB1",
+  "description": "Repo for WEBD6201-W2022 ICE-5",
   "main": "index.js",
-  "author": "Chris Lapp-Benjamin & Kamrin Aubin",
+  "author": "Kamrin Aubin",
   "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.13"
   }
 }
