--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ice-5",
+  "name": "lab-2",
   "version": "1.0.0",
-  "description": "Repo for WEBD6201-W2022 ICE-5",
+  "description": "Repo for WEBD6201-W2022 LAB-2",
   "main": "index.js",
-  "author": "Kamrin Aubin",
+  "author": "Christofer Lapp-Benjamin & Kamrin Aubin",
   "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
